# OOI-RCA-CGI

./: .gitignore  README.md  app.py  config.json  pyproject.toml  requirements.txt
.streamlit/: config.toml  secrets.toml.example
backend/controllers/: chat_controller.py
backend/core/: config.py  llm_manager.py
backend/db/: database.py  models.py
backend/projects/default/scripts/: fetch_and_plot_ctd.py  fetch_and_plot_ctd_temp.py  fetch_and_plot_ctd_temperature.py
backend/projects/test/scripts/: count_sites.py
backend/rag/: indexer.py  rca_instrumentation.md  rca_instrumentation.py  rca_metadata.json
backend/services/: data_processor.py  gmail_listener.py  m2m_client.py  zarr_client.py
backend/state/: project_manager.py
pages/: 1_Chat.py  2_Data.py  3_Settings.py  4_Analysis.py
projects/: .gitkeep
streamlit_utils/: __init__.py  auth.py  chat_engine.py  data_utils.py  plot_renderer.py  session.py  ui_components.py
tests/: conftest.py  test_01_parsing.py  test_02_config.py  test_03_llm.py  test_04_m2m.py  test_05_data.py  test_06_rag.py  test_07_projects.py  test_08_integration.py
